--- a/articles/data-factory/TOC.yml
+++ b/articles/data-factory/TOC.yml
@@ -526,6 +526,8 @@
           href: create-shared-self-hosted-integration-runtime-powershell.md
     - name: SSIS-pakketten uitvoeren in Azure
       items:
+        - name: SSIS-pakketten uitvoeren in Azure vanuit SSDT
+          href: how-to-invoke-ssis-package-ssdt.md
         - name: SSIS-pakketten uitvoeren met de activiteit SSIS-pakket uitvoeren
           href: how-to-invoke-ssis-package-ssis-activity.md
         - name: SSIS-pakketten uitvoeren met de activiteit Opgeslagen procedure
