--- a/articles/hdinsight/interactive-query/TOC.yml
+++ b/articles/hdinsight/interactive-query/TOC.yml
@@ -22,6 +22,12 @@
     - name: Capaciteitsplanning
       href: ../hdinsight-capacity-planning.md
       maintainContext: true
+    - name: Problemen oplossen
+      items:
+        - name: OutOfMemoryError-uitzondering
+          items:
+            - name: De limiet voor GC-overhead is overschreden
+              href: ./interactive-query-troubleshoot-outofmemory-overhead-exceeded.md
 - name: Procedures
   items:
     - name: Hive-workloads migreren naar HDInsight 4.0
