--- a/articles/hdinsight/spark/TOC.yml
+++ b/articles/hdinsight/spark/TOC.yml
@@ -56,12 +56,18 @@
           items:
             - name: Onvoldoende geheugen voor heap
               href: ./apache-spark-troubleshoot-outofmemory-heap.md
+            - name: Ruimte voor Java-heap
+              href: ./apache-spark-troubleshoot-outofmemory-heap-space.md
+        - name: Langzame Apache Spark-taken - opslagcontainer
+          href: ./apache-spark-troubleshoot-job-slowness-container.md
         - name: IllegalArgumentException-uitzondering
           href: ./apache-spark-troubleshoot-illegalargumentexception.md
         - name: Apache Spark-streamingtoepassing stopt
           href: ./apache-spark-troubleshoot-application-stops.md
         - name: RpcTimeoutException-uitzondering
           href: ./apache-spark-troubleshoot-rpctimeoutexception.md
+        - name: API's uit andere oorsprong blokkeren
+          href: ./apache-spark-troubleshoot-blocking-cross-origin.md
 - name: Procedures
   items:
     - name: Clusteropslag gebruiken
