--- a/articles/iot-hub/TOC.yml
+++ b/articles/iot-hub/TOC.yml
@@ -91,6 +91,8 @@
       href: iot-hub-scaling.md
     - name: Hoge beschikbaarheid en herstel na noodgevallen
       href: iot-hub-ha-dr.md
+    - name: Meer informatie over IP-adressen van IoT-hubs
+      href: iot-hub-understand-ip-address.md
     - name: Aanvullende protocollen ondersteunen
       href: iot-hub-protocol-gateway.md
     - name: Berichtroutering en gebeurtenisroutering vergelijken
