--- a/articles/cognitive-services/personalizer/toc.yml
+++ b/articles/cognitive-services/personalizer/toc.yml
@@ -43,6 +43,8 @@
         - name: Offline-evaluatie
           href: concepts-offline-evaluation.md
           displayName: 'learning policy, Counterfactual, features'
+        - name: Functie-evaluatie
+          href: concept-feature-evaluation.md
     - name: Schaalbaarheid en prestaties
       href: concepts-scalability-performance.md
 - name: Handleidingen
