--- a/articles/cognitive-services/text-analytics/index.yml
+++ b/articles/cognitive-services/text-analytics/index.yml
@@ -13,7 +13,7 @@ metadata:
   ms.tgt_pltfrm: na
   ms.devlang: na
   ms.topic: landing-page
-  ms.date: 09/24/2018
+  ms.date: 07/29/2019
   ms.author: nitinme
 abstract:
   description: 'De Text Analytics-API is een op de cloud gebaseerde service die geavanceerde verwerking van natuurlijke taal biedt voor onbewerkte tekst. De service bevat vier hoofdfuncties: sentimentanalyse, sleuteltermextractie, benoemde entiteitsherkenning en taaldetectie. Leer hoe u inhoud op verschillende manieren kunt analyseren met behulp van onze snelstartgidsen, zelfstudies en voorbeelden.'
@@ -34,11 +34,11 @@ sections:
             image:
               src: ../media/index/i_get-started.svg
             title: Registreren voor Text Analytics-API
-          - href: /azure/cognitive-services/text-analytics/how-tos/text-analytics-how-to-access-key
-            html: <p>Uitleg over het verkrijgen van de toegangssleutels en -eindpunten voor Text Analytics-API.</p>
+          - href: /azure/cognitive-services/text-analytics/whats-new
+            html: <p>Blijf op de hoogte over recente ontwikkelingen in de Text Analytics-API.</p>
             image:
               src: ../media/index/i_tasks.svg
-            title: Toegangssleutels voor Text Analytics-API
+            title: Wat is er nieuw in de Text Analytics-API?
   - title: QuickStarts van vijf minuten
     items:
       - type: paragraph
