--- a/articles/container-registry/TOC.yml
+++ b/articles/container-registry/TOC.yml
@@ -105,8 +105,14 @@
           href: container-registry-tasks-multi-step.md
         - name: Een installatiekopie maken met Buildpacks (preview)
           href: container-registry-tasks-pack-build.md
-        - name: Gebruiken met beheerde identiteit
-          href: container-registry-tasks-authentication-managed-identity.md
+        - name: Toegang tot beveiligde resources met beheerde identiteiten
+          items:
+            - name: Een beheerde identiteit inschakelen voor een taak
+              href: container-registry-tasks-authentication-managed-identity.md
+            - name: Verificatie tussen meerdere registers van een taak
+              href: container-registry-tasks-cross-registry-authentication.md
+            - name: Externe verificatie met behulp van een sleutelkluis
+              href: container-registry-tasks-authentication-key-vault.md
     - name: Registers en andere Azure-services
       items:
         - name: Azure Container Instances
