--- a/articles/azure-resource-manager/toc.yml
+++ b/articles/azure-resource-manager/toc.yml
@@ -258,6 +258,8 @@
           href: resource-group-template-functions-string.md
     - name: Modus voor volledige verwijdering
       href: complete-mode-deletion.md
+    - name: Limiet van resource-exemplaar
+      href: resources-without-rg-limit.md
     - name: Resourceproviders per service
       href: azure-services-resource-providers.md
     - name: REST - Resource Manager
