--- a/articles/billing/TOC.yml
+++ b/articles/billing/TOC.yml
@@ -71,6 +71,8 @@
               href: billing-prepay-app-service-isolated-stamp.md
             - name: Azure-softwareabonnementen
               href: ../virtual-machines/linux/prepay-suse-software-charges.md?toc=/azure/billing/TOC.json
+            - name: Reserveringen verlengen
+              href: billing-reservation-renew.md
         - name: Korting toepassen
           items:
             - name: Gereserveerde VM-instanties
