--- a/articles/hdinsight/spark/TOC.yml
+++ b/articles/hdinsight/spark/TOC.yml
@@ -58,6 +58,8 @@
               href: ./apache-spark-troubleshoot-outofmemory-heap.md
             - name: Ruimte voor Java-heap
               href: ./apache-spark-troubleshoot-outofmemory-heap-space.md
+            - name: Livy Server kan niet worden gestart
+              href: ./apache-spark-troubleshoot-outofmemory-native-thread.md
         - name: Langzame Apache Spark-taken - opslagcontainer
           href: ./apache-spark-troubleshoot-job-slowness-container.md
         - name: IllegalArgumentException-uitzondering
@@ -68,6 +70,8 @@
           href: ./apache-spark-troubleshoot-rpctimeoutexception.md
         - name: API's uit andere oorsprong blokkeren
           href: ./apache-spark-troubleshoot-blocking-cross-origin.md
+        - name: Kryo-serialisatie mislukt
+          href: ./apache-spark-troubleshoot-sparkexception-kryo-serialization-failed.md
 - name: Procedures
   items:
     - name: Clusteropslag gebruiken
