--- a/articles/cognitive-services/Face/toc.yml
+++ b/articles/cognitive-services/Face/toc.yml
@@ -15,6 +15,8 @@
               href: QuickStarts/csharp-detect-sdk.md
             - name: Python
               href: Tutorials/FaceAPIinPythonTutorial.md
+        - name: Python-SDK
+          href: QuickStarts/python-sdk.md
     - name: Met behulp van de REST API
       items:
         - name: Gezichten in een afbeelding detecteren
