--- a/articles/blockchain/service/TOC.yml
+++ b/articles/blockchain/service/TOC.yml
@@ -21,7 +21,7 @@
           href: connect-truffle.md
 - name: Zelfstudies
   items:
-    - name: Transacties verzenden
+    - name: Slimme contracten gebruiken
       href: send-transaction.md
 - name: Concepten
   items:
