--- a/articles/time-series-insights/TOC.yml
+++ b/articles/time-series-insights/TOC.yml
@@ -17,9 +17,9 @@
           href: time-series-insights-update-quickstart.md
 - name: Zelfstudies
   items:
-    - name: JavaScript-clientbibliotheek van Time Series Insights ontdekken
+    - name: JavaScript-clientbibliotheek van Time Series Insights
       href: tutorial-explore-js-client-lib.md
-    - name: Een Time Series Insights-web-app met één pagina maken
+    - name: Een web-app met één pagina maken
       href: tutorial-create-tsi-sample-spa.md
     - name: Azure Time Series Insights GA
       items:
