--- a/articles/azure-functions/TOC.yml
+++ b/articles/azure-functions/TOC.yml
@@ -65,6 +65,8 @@
       href: ../event-grid/resize-images-on-storage-blob-upload-event.md?toc=%2fazure%2fazure-functions%2ftoc.json
     - name: Een serverloze web-app maken
       href: /learn/modules/automatic-update-of-a-webapp-using-azure-functions-and-signalr
+    - name: Machine Learning met TensorFlow
+      href: functions-machine-learning-tensorflow.md
     - name: Een aangepaste Linux-installatiekopie maken
       href: functions-create-function-linux-custom-image.md
     - name: Functions op IoT Edge-apparaat
