--- a/articles/azure-resource-manager/toc.yml
+++ b/articles/azure-resource-manager/toc.yml
@@ -13,6 +13,8 @@
       href: resource-manager-quickstart-create-templates-use-visual-studio-code.md
     - name: Sjablonen maken - Visual Studio
       href: vs-azure-tools-resource-groups-deployment-projects-create-deploy.md
+    - name: Sjablonen maken - IntelliJ IDEA
+      href: resource-manager-quickstart-create-templates-use-intellij.md
 - name: Zelfstudies
   items:
     - name: Sjabloonverwijzing gebruiken
