--- a/articles/cdn/TOC.yml
+++ b/articles/cdn/TOC.yml
@@ -150,6 +150,8 @@
       items:
         - name: X-EC-Debug-headers
           href: cdn-http-debug-headers.md
+    - name: Microsoft-specifieke HTTP-headers
+      href: cdn-msft-http-debug-headers.md
     - name: Azure PowerShell
       href: /powershell/module/az.cdn
     - name: .NET
