--- a/articles/cosmos-db/TOC.yml
+++ b/articles/cosmos-db/TOC.yml
@@ -579,6 +579,9 @@
         - name: Doorvoer inrichten voor een database
           displayName: 'request units, RUs, RU, shared throughput, database level'
           href: how-to-provision-database-throughput.md
+        - name: Aanvraageenheden/seconde inschatten met Cosmos Capacity Planner
+          displayName: 'request units, RUs, RU, capacity'
+          href: estimate-ru-with-capacity-planner.md
         - name: Kosten voor aanvraageenheid zoeken
           displayName: 'request units, RUs, RU, charge, consumption'
           href: find-request-unit-charge.md
