--- a/articles/data-factory/TOC.yml
+++ b/articles/data-factory/TOC.yml
@@ -584,6 +584,12 @@
           href: ssis-integration-runtime-management-troubleshoot.md
         - name: Problemen met het uitvoeren van pakketten in Azure-SSIS IR oplossen
           href: ssis-integration-runtime-ssis-activity-faq.md
+- name: Scenario's
+  items:
+    - name: Gegevensmigratie voor data lake en EDW
+      items:
+        - name: Waarom Azure Data Factory?
+          href: data-migration-guidance-overview.md
 - name: Naslaginformatie
   items:
     - name: .NET
