--- a/articles/logic-apps/toc.yml
+++ b/articles/logic-apps/toc.yml
@@ -21,6 +21,12 @@
       href: tutorial-process-mailing-list-subscriptions-workflow.md
     - name: E-mailbijlagen verwerken
       href: tutorial-process-email-attachments-workflow.md
+- name: Voorbeelden
+  items:
+    - name: Azure-codevoorbeelden
+      href: 'https://docs.microsoft.com/samples/browse/?products=azure-logic-apps'
+    - name: Resource Manager-quickstart-sjablonen
+      href: 'https://azure.microsoft.com/resources/templates/?resourceType=Microsoft.Logic'
 - name: Concepten
   items:
     - name: Connectors voor Logic Apps
@@ -349,15 +355,15 @@
           href: /azure/architecture/reference-architectures/enterprise-integration/queues-events
     - name: 'Connectors: volledige informatie'
       href: 'https://docs.microsoft.com/connectors/'
-    - name: Limieten en configuratie
+    - name: Servicelimieten en configuratie
       href: logic-apps-limits-and-config.md
-    - name: Gebruik meten
+    - name: Prijsmodel en gebruiksmeting
       href: logic-apps-pricing.md
     - name: Azure PowerShell
       href: /powershell/module/az.logicapp
     - name: REST-API
       href: /rest/api/logic/
-    - name: Resource Manager-sjabloon
+    - name: Resource Manager-sjabloonreferentie
       href: /azure/templates/microsoft.logic/allversions
     - name: Definitietaal van werkstroomschema
       href: logic-apps-workflow-definition-language.md
@@ -378,23 +384,27 @@
           href: logic-apps-track-integration-account-custom-tracking-schema.md
 - name: Resources
   items:
+    - name: Uw vaardigheden ontwikkelen met Microsoft Learn
+      href: 'https://docs.microsoft.com/learn/browse/?products=azure-logic-apps'
     - name: Roadmap voor Azure Logic Apps
       href: 'https://aka.ms/logicappsroadmap/'
     - name: Azure-roadmap
       href: 'https://azure.microsoft.com/roadmap/'
+    - name: Prijzen
+      href: 'https://azure.microsoft.com/pricing/details/logic-apps/'
+    - name: Prijscalculator
+      href: 'https://azure.microsoft.com/pricing/calculator/'
+    - name: Verhalen van klanten
+      href: 'https://customers.microsoft.com/en-us/search?sq=%22Azure%20Logic%20Apps%20%22&ff=story_product_categories%26%3EAzure&p=0&so=story_publish_date%20desc'
+    - name: Video's
+      href: 'https://azure.microsoft.com/resources/videos/index/?services=logic-apps&sort=newest'
     - name: MSDN-forum
       href: 'https://social.msdn.microsoft.com/Forums/azure/home?forum=azurelogicapps'
     - name: Stack Overflow
       href: 'https://stackoverflow.com/questions/tagged/azure-logic-apps'
     - name: Twitter
       href: 'https://twitter.com/logicappsio'
-    - name: Prijzen
-      href: 'https://azure.microsoft.com/pricing/details/logic-apps/'
-    - name: Prijscalculator
-      href: 'https://azure.microsoft.com/pricing/calculator/'
+    - name: Productfeedback geven
+      href: 'https://feedback.azure.com/forums/287593-logic-apps'
     - name: Service-updates
       href: 'https://azure.microsoft.com/updates/?product=logic-apps'
-    - name: Verhalen van klanten
-      href: 'https://customers.microsoft.com/en-us/search?sq=%22Azure%20Logic%20Apps%20%22&ff=story_product_categories%26%3EAzure&p=0&so=story_publish_date%20desc'
-    - name: Video's
-      href: 'https://azure.microsoft.com/resources/videos/index/?services=logic-apps&sort=newest'
