--- a/articles/data-catalog/TOC.yml
+++ b/articles/data-catalog/TOC.yml
@@ -55,7 +55,7 @@
 - name: Naslaginformatie
   items:
     - name: Codevoorbeelden
-      href: 'https://azure.microsoft.com/resources/samples/?service=data-catalog'
+      href: data-catalog-samples.md
     - name: REST
       href: /rest/api/datacatalog/
     - name: Naslaginformatie over zoeksyntaxis
